--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -4,6 +4,7 @@
   - [0-1背包问题](#0-1背包问题)
   - [剑指10-1.斐波那契数列](#剑指10-1斐波那契数列)
   - [70. 爬楼梯问题](#70-爬楼梯问题)
+  - [746. 使用最小花费爬楼梯](#746-使用最小花费爬楼梯)
   - [补充问题： 圆环回原点问题](#补充问题-圆环回原点问题)
   - [494. 目标和 target sum [Medium]](#494-目标和-target-sum-medium)
 - [子序和问题](#子序和问题)
@@ -25,6 +26,7 @@
   - [486. 预测赢家](#486-预测赢家)
   - [877. 石子游戏](#877-石子游戏)
   - [1563. 石子游戏](#1563-石子游戏)
+  - [补充. 回文串变换 [360笔试]](#补充-回文串变换-360笔试)
 - [背包问题系列](#背包问题系列)
   - [416. 分割等和子集](#416-分割等和子集)
   - [1049. 最后一块石头的重量II](#1049-最后一块石头的重量ii)
@@ -196,7 +198,47 @@ public:
     }
 };
 ```
+### 746. 使用最小花费爬楼梯
+> 每当你爬上一个阶梯你都要花费对应的体力值，一旦支付了相应的体力值，你就可以选择向上爬一个阶梯或者爬两个阶梯
+**找出达到楼层顶部的最低花费**
 
+- [LC70.爬楼梯]的升级版本
+- 把当前楼梯的cost考虑进入公式即可
+  - `dp[i]`表示达到当前楼梯所需的最小花费
+  - `dp[i] = min(dp[i-1]+cost[i-1], dp[i-2] + cost[i-2])`
+
+```c++
+class Solution {
+public:
+    int minCostClimbingStairs(vector<int>& cost) {
+        int n = cost.size();
+        vector<int> dp(n + 1);
+        dp[0] = 0;
+        dp[1] = 0;
+        for (int i = 2; i <= n; i++) {
+            dp[i] = min(dp[i-1] + cost[i-1], dp[i-2] + cost[i-2]);
+        }
+        return dp[n];
+    }
+};
+```
+- 空间压缩，使用临时变量代替数组
+```c++
+class Solution {
+public:
+    int minCostClimbingStairs(vector<int>& cost) {
+        int n = cost.size();
+        int pre = 0;
+        int cur = 0;
+        for (int i = 2; i <= n; i++) {
+            int tmp = cur;
+            cur = min(cur + cost[i-1], pre+ cost[i-2]);
+            pre = tmp;
+        }
+        return cur;
+    }
+};
+```
 ### 补充问题： 圆环回原点问题
 
 > 圆环上有10个点，编号为0~9。从0点出发，每次可以逆时针和顺时针走一步，问走n步回到0点共有多少种走法。
@@ -1028,6 +1070,77 @@ public:
     }
 };
 ```
+
+
+
+
+### 补充. 回文串变换 [360笔试]
+> 所谓回文数就是一个数字，从左边读和从右边读的结果都是一样的，例如12321。
+现在有一个只包含1、2、3、4的数字，你可以通过在任意位置增加一位数字或者删除一位数字来将其变换成一个回文数。但是增加或删除不同数字所需要的代价是不一样的。
+```
+已知增加和删除每个数字的代价如下：
+增加一个1，代价：100；删除一个1，代价：120。
+增加一个2，代价：200；删除一个2，代价：350。
+增加一个3，代价：360；删除一个3，代价：200。
+增加一个4，代价：220；删除一个4，代价：320。
+```
+> 请问如何**通过最少的代价将一个数字变换为一个回文数**。当然，如果一个数字本身已经是一个回文数（包括一位数，例如：2），那么变换的代价为0。
+
+- 动态规划问题：
+  - `dp[i][j]`定义从i~j子串构成回文数的最少代价
+  - 若`s[i] == s[j]`, 则`dp[i][j] = dp[i+1][j-1]`
+  - 若不相等，则需要进行删减操作，考虑左右两边的删增操作，即得到如下的公式：
+    - 在右侧添加一个`s[i]` 需要考察i+1~j子串的回文数代价, 即i与新增的j+1进行匹配
+    - 在左侧添加`s[j]` 对应i~j-1
+    - 在左侧删除`s[i]`： 对应 i+1 ~j, 即i+1需要和j匹配
+    - 在右侧删除`s[j]`： 对应i ~ j - 1, 即i需要和j-1匹配
+    - `dp[i][j] = min(min(dp[i+1][j] + add[s[i]], dp[i][j-1] + add[s[j]]), min( dp[i+1][j] + del[s[i]], dp[i][j-1] + del[s[j]]))`
+- 采用了自顶而下的递归方式进行求解
+  - 为了避免重复计算，在递归中对dp有值的循环直接返回即可
+  - 实现逻辑上与[LC1563.石子游戏]相似
+
+```c++
+#include<iostream>
+#include<vector>
+#include<string>
+#include<algorithm>
+using namespace std;
+
+int add[4] = {100, 200, 360, 220};
+int del[4] = {120, 350, 200, 320};
+vector<vector<int>> dp;
+int dfs(string nums, int i, int j) {
+    if (i >= j) return 0;
+    if (dp[i][j] != 0) {
+        return dp[i][j]; // 直接返回
+    }
+    if (nums[i] == nums[j]) {
+        dp[i][j] = dfs(nums, i + 1, j - 1); 
+    }
+    else {
+        dp[i][j] = min(min(dfs(nums, i + 1, j) + add[nums[i] - '1'], //添加左侧
+                       dfs(nums, i, j - 1) + add[nums[j] - '1'] // 添加右侧
+                      ),
+                   min(dfs(nums, i + 1, j) + del[nums[i] - '1'], //删除左侧
+                       dfs(nums, i, j - 1) + del[nums[j] - '1'] // 删除右侧
+                      )
+                      );
+    }
+    return dp[i][j];
+}
+int main() {
+    string n;
+    cin >> n;
+    
+    int N = n.size();
+    dp = vector<vector<int>> (N, vector<int>(N));
+     
+    cout << dfs(n, 0, N - 1);
+    return 0;
+}
+```
+
+
 
 ## 背包问题系列
 - https://leetcode-cn.com/problems/partition-equal-subset-sum/solution/bang-ni-ba-0-1bei-bao-xue-ge-tong-tou-by-px33/
