--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -8,6 +8,7 @@
   - [前言](#前言)
 - [查找节点](#查找节点)
   - [2. 两数相加](#2-两数相加)
+  - [369. 链表加一](#369-链表加一)
   - [445. 两数相加 II](#445-两数相加-ii)
   - [剑指22. 链表中倒数第k个节点](#剑指22-链表中倒数第k个节点)
   - [138. 复制带随机指针的链表](#138-复制带随机指针的链表)
@@ -110,6 +111,90 @@ public:
     }
 };
 ```
+### 369. 链表加一
+> 用一个 非空 单链表来表示一个非负整数，然后将这个整数加一。
+**高位在链表头部、低位在链表尾部 **
+
+- 基础做法： 链表反转后进行加一即可，最后再进行反转得到结果
+  - 常规做法，考虑对链表操作的熟练程度
+
+```c++
+class Solution {
+public:
+    ListNode* reverse(ListNode* head) {
+        if (head == nullptr || head -> next == nullptr) {
+            return head;
+        }
+        ListNode* p = reverse(head -> next);
+        head -> next -> next = head;
+        head -> next = nullptr;
+        return p;
+    }
+    ListNode* plusOne(ListNode* head) {
+        ListNode* phead = reverse(head);
+        ListNode* p = phead;
+        ListNode* pre = nullptr;
+        int plus = 1;
+        while (plus != 0) {
+            int v = p != nullptr ? p -> val : 0;
+            if (p != nullptr) {
+                p -> val = (plus + v) % 10;
+                pre = p;
+                p = p -> next;
+            }
+            else {
+                pre -> next  = new ListNode((plus + v) % 10);
+            }
+            plus = (plus + v) / 10;
+        }
+        return reverse(phead);
+    }
+};
+```
+- 更优雅的做法： **哨兵法 + 寻找最右的不是9的节点**
+  - 找到最右侧的不是9的节点，将其值++
+  - 并将其后的值全变为0；
+  - 本质上是在**利用加法加1的特性**
+- 特殊情况处理： 当链表为9999...的时候， 利用哨兵/dummy node来进行处理，**将dummy node设为1进行返回即可**
+- **总体实现起来技巧性很强，但代码简洁易懂**。
+```c++
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode() : val(0), next(nullptr) {}
+ *     ListNode(int x) : val(x), next(nullptr) {}
+ *     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ * };
+ */
+class Solution {
+public:
+
+    ListNode* plusOne(ListNode* head) {
+        ListNode* phead = new ListNode(0); //赋初值进行判断
+        phead -> next = head;
+        ListNode* p = phead; // 目标位置设为哨兵位
+        while (head) {
+            if (head -> val != 9)  {
+                p = head;
+            }
+            head = head -> next;
+        } 
+        if (p == nullptr && head != nullptr) {
+
+        }
+        p -> val++;
+        p = p -> next;
+        while (p) {
+            p -> val = 0;
+            p = p -> next;
+        }
+       return phead -> val == 0 ? phead -> next : phead;
+    }
+};
+```
+
 ### 445. 两数相加 II
 > 两个 非空 链表来代表两个非负整数。**数字最高位位于链表开始位置**。它们的每个节点只存储一位数字。将这两数相加会返回一个新的链表。
 - 对于相加操作而言，是逆序操作，需要进行链表reverse操作
