--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -52,6 +52,7 @@
   - [252. 会议室](#252-会议室)
   - [253. 会议室II](#253-会议室ii)
   - [1353. 最多可以参加的会议数目](#1353-最多可以参加的会议数目)
+  - [补充. 替换字符串](#补充-替换字符串)
 
 
 ## 遍历问题
@@ -2228,4 +2229,45 @@ public:
         return ans;
     }
 };
+```
+
+### 补充. 替换字符串
+> 给出一个只含 a b 字符的串，问不断将串中的 “ab” 字串替换为 “bba” 至少需要几次可以结束替换。
+```
+ab: 1
+aab: 3
+```
+- 对于最后的一个ab,替换成bba后，可以发现他后面有a是没用的，有b才有用，有一个b就替换一次。bbab-&gt;bbbba了。
+- 这时候你想对于替换前那最后一个ab，他前面如果有a会怎么样呢，a可以消耗掉那最后一个ab替换后得到所有的b而且产生他两倍的b。
+```c++
+#include<iostream>
+#include<string>
+#include<stack>
+#include<vector>
+using namespace std;
+
+int main() {
+    string s;
+    cin >> s;
+    long long ans = 0;
+    int n = s.size();
+    int left = 0;
+    int bcnt = 0;
+    int acnt = 0;
+    for (int i = n - 1; i >= 0; i--) {
+        if (s[i] == 'b') {
+            bcnt++; // 倒序计算最后一个b
+        }
+        else {
+            acnt++;
+            // 计算替换次数
+            // 生成两倍的b
+            ans += bcnt % 1000000007; 
+            bcnt *= 2;
+            bcnt %= 1000000007;
+        }
+    }
+    cout << ans % 1000000007 << endl;
+    return 0;
+}
 ```
