--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -20,6 +20,7 @@
   - [287. 寻找重复数](#287-寻找重复数)
   - [719. 寻找第k小的距离对 [KEY]](#719-寻找第k小的距离对-key)
   - [410. 分割数组的最大值 [KEY]](#410-分割数组的最大值-key)
+  - [668. 乘法表中第k小数](#668-乘法表中第k小数)
   - [补充题目： 木头切割问题 *](#补充题目-木头切割问题-)
   - [29. 两数相除 [Medium]](#29-两数相除-medium)
   - [1095. 山脉数组中查找目标值](#1095-山脉数组中查找目标值)
@@ -1246,7 +1247,63 @@ public:
     }
 };
 ```
+### 668. 乘法表中第k小数
+> 给定高度m 、宽度n 的一张 m * n的乘法表，以及正整数k，你需要返回表中第k 小的数字。
+> m 和 n 的范围在 [1, 30000] 之间。
+k 的范围在 [1, m * n] 之间。
 
+```
+输入: m = 2, n = 3, k = 6
+输出: 6
+解释: 
+乘法表:
+1	2	3
+2	4	6
+第6小的数字是 6 (1, 2, 2, 3, 4, 6).
+```
+- 暴力排序方法，由于m和n的乘积比较大，直接超时
+- 基于堆进行topK计算的方法同样无法避免近似O(N^2)的遍历复杂度
+- 本题采用**二分搜索**的方法进行确定，是二分思想的变形应用。
+  - 搜索空间为`[1, m*n]`
+  - 每次对于`mid` 计算乘法表中多少个数小于mid  
+    - 通过**逐行计算**的方式来进行快速统计
+  - 在边界确定上，采用确定左边界的方式来计算，以确保找到满足条件的边界即为kth数
+```c++
+class Solution {
+public:
+    int check(int m, int n, int target) {
+        int cnt = 0;
+        int row = 1; int col = n;
+        // 技巧性十足
+        // 从一个矩阵的右上角开始往下计算，效率显著提升
+        while (row <= m && col > 0) {
+            if (row * col <= target) {
+                cnt += col; // 按行比较， 是本题代码的灵魂
+                row++;
+            }
+            else {
+                col--;
+            }
+        }
+        return cnt;
+    }
+    int findKthNumber(int m, int n, int k) {
+        int left = 1;
+        int right = m * n;
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            int s = check(m, n, mid);
+            if (s >= k) {// 寻找左边界
+                right = mid - 1;
+            }
+            else {
+                left = mid + 1;
+            }
+        }
+        return left;
+    }
+};
+```
 ### 补充题目： 木头切割问题 *
 > 给定长度为n的数组，每个元素代表一个木头的长度，木头可以任意截断，从这堆木头中截出至少k个相同长度为m的木块。已知k，求max(m)。
 > 输入两行，第一行n, k，第二行为数组序列。输出最大值
