[topics] add palindromic

--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -36,10 +36,10 @@
   - [680. 验证回文串II](#680-验证回文串ii)
   - [132. 分割回文串 II *](#132-分割回文串-ii-)
   - [647.  回文子串](#647--回文子串)
-  - [139. 单词拆分](#139-单词拆分)
   - [516. 最长回文子序列](#516-最长回文子序列)
   - [5809. 长度为3的不同回文子序列 [周赛]](#5809-长度为3的不同回文子序列-周赛)
   - [564. 寻找最近的回文数](#564-寻找最近的回文数)
+  - [补充. 回文串变换 [360笔试]](#补充-回文串变换-360笔试)
 - [字符串转换问题](#字符串转换问题)
   - [8.字符串转换整数 (atoi) Mid *](#8字符串转换整数-atoi-mid-)
 - [综合问题](#综合问题)
@@ -47,6 +47,7 @@
   - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
   - [32. 最长有效括号](#32-最长有效括号)
   - [678. 有效的括号字符串](#678-有效的括号字符串)
+  - [139. 单词拆分](#139-单词拆分)
   - [71. 简化路径 *](#71-简化路径-)
   - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
   - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
@@ -1790,78 +1791,6 @@ public:
 ```
 - 其他： o(n) 复杂度的**manacher算法**
   - 待学习
-
-### 139. 单词拆分
-> 给定一个非空字符串 s 和一个包含非空单词的列表 wordDict，判定 s 是否可以被空格拆分为一个或多个在字典中出现的单词。
-说明：拆分时可以重复使用字典中的单词。你可以假设字典中没有重复的单词
-
-```
-输入: s = "leetcode", wordDict = ["leet", "code"]
-输出: true
-```
-- 字符串分割问题，暴力的思路就是枚举各种情况，那么再优化一点就是用回溯法来解题
-  - 使用记忆化的思路来进行剪枝，**记录下以当位置开始子串是否能够被拆分**
-  - 剩下的就是回溯法的模板
-- 关键点： **`记忆化 + 回溯`**
-- 时间复杂度 O(2^N) 空间复杂度 O(N)
-
-```c++
-class Solution {
-public:
-    bool backTrack(string s, unordered_set<string>& wordDict, int startIndex, vector<int>& memo) {
-        if (startIndex == s.size()) return true;
-
-        if (memo[startIndex] != -1) return memo[startIndex];
-        for (int i = startIndex; i < s.size(); i++) {
-            string word = s.substr(startIndex, i - startIndex + 1);
-            if (wordDict.count(word) && backTrack(s, wordDict, i + 1, memo)) {
-                memo[i] = 1;
-                return true;
-            }
-        }
-        memo[startIndex] = 0; // 以startIndex开始的子串不可分割
-        return false;
-
-    }
-    bool wordBreak(string s, vector<string>& wordDict) {
-        if (s.empty()) return true;
-        vector<int> memo (s.size(), -1);
-        unordered_set<string> wordSet(wordDict.begin(), wordDict.end());
-        return backTrack(s, wordSet, 0, memo);
-
-    }
-};
-```
-- 本题还有**动态规划**做法： 
-  - 定义dp[i] 表示从[0,i]子串是否可以正确拆分
-  - `dp[i] = (dp[i - j] & dp[j]);` 类似于0/1背包问题
-  - 初始化： `dp<n+1,0>`
-  - 遍历方向： 外层遍历不同位置[1,s.size()]； 内层遍历子段
-- 时间复杂度 O(N^3) 内外循环+子段查找
-```c++
-class Solution {
-public:
-    
-    bool wordBreak(string s, vector<string>& wordDict) {
-        if (s.empty()) return true;
-        vector<int> dp(s.size() + 1, 0);
-        unordered_set<string> wordSet(wordDict.begin(), wordDict.end());
-        dp[0] = 1;
-        // 从1开始编码， (j,i)取出的word刚好为目标子段
-        for (int i = 1; i <= s.size(); i++) {
-            for (int j = 0; j < i; j++) {
-                string word = s.substr(j, i - j);
-                // 判断当前词是否出现 且之前的值也出现过
-                if (wordSet.count(word) && dp[j]) {
-                    dp[i] = 1;
-                }
-            }
-        }
-        return dp[s.size()];
-
-    }
-};
-```
 ### 516. 最长回文子序列
 
 > 给定一个字符串 s ，找到其中最长的回文子序列，并返回该序列的长度。可以假设 s 的最大长度为 1000 。
@@ -2039,6 +1968,73 @@ public:
 };
 ```
 
+
+
+### 补充. 回文串变换 [360笔试]
+> 所谓回文数就是一个数字，从左边读和从右边读的结果都是一样的，例如12321。
+现在有一个只包含1、2、3、4的数字，你可以通过在任意位置增加一位数字或者删除一位数字来将其变换成一个回文数。但是增加或删除不同数字所需要的代价是不一样的。
+```
+已知增加和删除每个数字的代价如下：
+增加一个1，代价：100；删除一个1，代价：120。
+增加一个2，代价：200；删除一个2，代价：350。
+增加一个3，代价：360；删除一个3，代价：200。
+增加一个4，代价：220；删除一个4，代价：320。
+```
+> 请问如何**通过最少的代价将一个数字变换为一个回文数**。当然，如果一个数字本身已经是一个回文数（包括一位数，例如：2），那么变换的代价为0。
+
+- 动态规划问题：
+  - `dp[i][j]`定义从i~j子串构成回文数的最少代价
+  - 若`s[i] == s[j]`, 则`dp[i][j] = dp[i+1][j-1]`
+  - 若不相等，则需要进行删减操作，考虑左右两边的删增操作，即得到如下的公式：
+    - 在右侧添加一个`s[i]` 需要考察i+1~j子串的回文数代价, 即i与新增的j+1进行匹配
+    - 在左侧添加`s[j]` 对应i~j-1
+    - 在左侧删除`s[i]`： 对应 i+1 ~j, 即i+1需要和j匹配
+    - 在右侧删除`s[j]`： 对应i ~ j - 1, 即i需要和j-1匹配
+    - `dp[i][j] = min(min(dp[i+1][j] + add[s[i]], dp[i][j-1] + add[s[j]]), min( dp[i+1][j] + del[s[i]], dp[i][j-1] + del[s[j]]))`
+- 采用了自顶而下的递归方式进行求解
+  - 为了避免重复计算，在递归中对dp有值的循环直接返回即可
+  - 实现逻辑上与[LC1563.石子游戏]相似
+
+```c++
+#include<iostream>
+#include<vector>
+#include<string>
+#include<algorithm>
+using namespace std;
+
+int add[4] = {100, 200, 360, 220};
+int del[4] = {120, 350, 200, 320};
+vector<vector<int>> dp;
+int dfs(string nums, int i, int j) {
+    if (i >= j) return 0;
+    if (dp[i][j] != 0) {
+        return dp[i][j]; // 直接返回
+    }
+    if (nums[i] == nums[j]) {
+        dp[i][j] = dfs(nums, i + 1, j - 1); 
+    }
+    else {
+        dp[i][j] = min(min(dfs(nums, i + 1, j) + add[nums[i] - '1'], //添加左侧
+                       dfs(nums, i, j - 1) + add[nums[j] - '1'] // 添加右侧
+                      ),
+                   min(dfs(nums, i + 1, j) + del[nums[i] - '1'], //删除左侧
+                       dfs(nums, i, j - 1) + del[nums[j] - '1'] // 删除右侧
+                      )
+                      );
+    }
+    return dp[i][j];
+}
+int main() {
+    string n;
+    cin >> n;
+    
+    int N = n.size();
+    dp = vector<vector<int>> (N, vector<int>(N));
+     
+    cout << dfs(n, 0, N - 1);
+    return 0;
+}
+```
 
 ## 字符串转换问题
 
@@ -2368,6 +2364,79 @@ public:
             if (left < 0 || right < 0) return false;
         }
         return true;
+    }
+};
+```
+
+### 139. 单词拆分
+> 给定一个非空字符串 s 和一个包含非空单词的列表 wordDict，判定 s 是否可以被空格拆分为一个或多个在字典中出现的单词。
+说明：拆分时可以重复使用字典中的单词。你可以假设字典中没有重复的单词
+
+```
+输入: s = "leetcode", wordDict = ["leet", "code"]
+输出: true
+```
+- 字符串分割问题，暴力的思路就是枚举各种情况，那么再优化一点就是用回溯法来解题
+  - 使用记忆化的思路来进行剪枝，**记录下以当位置开始子串是否能够被拆分**
+  - 剩下的就是回溯法的模板
+- 关键点： **`记忆化 + 回溯`**
+- 时间复杂度 O(2^N) 空间复杂度 O(N)
+
+```c++
+class Solution {
+public:
+    bool backTrack(string s, unordered_set<string>& wordDict, int startIndex, vector<int>& memo) {
+        if (startIndex == s.size()) return true;
+
+        if (memo[startIndex] != -1) return memo[startIndex];
+        for (int i = startIndex; i < s.size(); i++) {
+            string word = s.substr(startIndex, i - startIndex + 1);
+            if (wordDict.count(word) && backTrack(s, wordDict, i + 1, memo)) {
+                memo[i] = 1;
+                return true;
+            }
+        }
+        memo[startIndex] = 0; // 以startIndex开始的子串不可分割
+        return false;
+
+    }
+    bool wordBreak(string s, vector<string>& wordDict) {
+        if (s.empty()) return true;
+        vector<int> memo (s.size(), -1);
+        unordered_set<string> wordSet(wordDict.begin(), wordDict.end());
+        return backTrack(s, wordSet, 0, memo);
+
+    }
+};
+```
+- 本题还有**动态规划**做法： 
+  - 定义dp[i] 表示从[0,i]子串是否可以正确拆分
+  - `dp[i] = (dp[i - j] & dp[j]);` 类似于0/1背包问题
+  - 初始化： `dp<n+1,0>`
+  - 遍历方向： 外层遍历不同位置[1,s.size()]； 内层遍历子段
+- 时间复杂度 O(N^3) 内外循环+子段查找
+- 关键点： **`动态规划 + 01背包`**
+```c++
+class Solution {
+public:
+    
+    bool wordBreak(string s, vector<string>& wordDict) {
+        if (s.empty()) return true;
+        vector<int> dp(s.size() + 1, 0);
+        unordered_set<string> wordSet(wordDict.begin(), wordDict.end());
+        dp[0] = 1;
+        // 从1开始编码， (j,i)取出的word刚好为目标子段
+        for (int i = 1; i <= s.size(); i++) {
+            for (int j = 0; j < i; j++) {
+                string word = s.substr(j, i - j);
+                // 判断当前词是否出现 且之前的值也出现过
+                if (wordSet.count(word) && dp[j]) {
+                    dp[i] = 1;
+                }
+            }
+        }
+        return dp[s.size()];
+
     }
 };
 ```
