update binary search part

--- a/leetcode/排序与查找/二分查找.md
+++ b/leetcode/排序与查找/二分查找.md
@@ -9,10 +9,10 @@
   - [81. 搜索旋转有序数组 [有重复] [Medium]](#81-搜索旋转有序数组-有重复-medium)
   - [34. 在排序数组中查找元素的第一个和最后一个位置  [Medium Red*]](#34-在排序数组中查找元素的第一个和最后一个位置--medium-red)
   - [658. Find K Closest Elements [Medium]](#658-find-k-closest-elements-medium)
-  - [162. 寻找峰值](#162-寻找峰值)
+  - [162. 寻找峰值 :sunny:](#162-寻找峰值-sunny)
 - [衍生题目](#衍生题目)
-  - [4. 寻找两个正序数组的中位数 **](#4-寻找两个正序数组的中位数-)
-  - [50. Pow(x,n)](#50-powxn)
+  - [4. 寻找两个正序数组的中位数 :sunny:](#4-寻找两个正序数组的中位数-sunny)
+  - [50. Pow(x,n) :m:](#50-powxn-m)
   - [367. 有效的完全平方数](#367-有效的完全平方数)
   - [744. 寻找比目标字母大的最小字母](#744-寻找比目标字母大的最小字母)
   - [153. 寻找旋转排列数组中的最小值 *](#153-寻找旋转排列数组中的最小值-)
@@ -23,15 +23,16 @@
   - [668. 乘法表中第k小数](#668-乘法表中第k小数)
   - [补充题目： 木头切割问题 *](#补充题目-木头切割问题-)
   - [29. 两数相除 [Medium]](#29-两数相除-medium)
+  - [852. 山脉数组的峰顶索引](#852-山脉数组的峰顶索引)
   - [1095. 山脉数组中查找目标值](#1095-山脉数组中查找目标值)
 - [总结体会](#总结体会)
 
 ## 基础题目
 ### 二分查找基本模版：
-- input: (array,target)
-- return: index/-1
+- **input**: (array,target)
+- **return**: index/-1
 - 关键要素：
-    - 循环终止条件：Left<=right
+    - 循环终止条件：**Left<=right** / **left < right**
     - left mid right设置
     - 判断条件设置
 
@@ -97,14 +98,14 @@ int upper_bound(int *array, int size, int key)
 }
 ```
 
-- 自定义实现的情况
+- **自定义实现的情况**
 ```c++
 // 查找第一个大于等于x的位置: [l,r]
 int lower_bound(int l, int r, int x) {
     while (l <= r) {
         int mid = (l+r)>>1;
         if (a[mid] < x) l = mid+1;
-        else r = mid-1;
+        else r = mid-1; // 右缩边界
     }
     return l;
 }
@@ -125,14 +126,14 @@ int upper_bound(int l, int r, int x) {
   - **两种情况在临界情况下的结果不同**
   - 当列表长度为1是， `l<r`的循环不会被执行： 直接`return 0`
   - 而`l<=r`的循环下还会执行一次，可能得到`return 1`
-  - 在实际写代码中需要这个临界条件的影响
+  - **在实际写代码中需要这个临界条件的影响**
 
 ### 变形题目： X的平方根
 - 计算平方根的整数部分，往往不是直接利用sqrt进行求解。
 - 主要还是用二分查找: 时间复杂度O(logn)，空间复杂度为O(1)
-    - 保存mid值作为ans
+    - **保存mid值作为ans**
 
-```
+```c++
 class Solution {
 public:
     int mySqrt(int x) {
@@ -159,27 +160,25 @@ public:
 };
 ```
 
-```class Solution {
+```c++
+class Solution {
 public:
     int mySqrt(int x) {
-        int right=x;
-        int left=0;
-        int ans=0;
-        //if(x==1) return 1;
-        while(left<=right){
-            int mid=left+(right-left)/2;
-            //cout<<mid<<endl;
-            // 注意： 强制类型转换的方式
-            if((long long )mid*mid>x){
-                right=mid-1;
+        int left = 0;
+        int right = x / 2 + 1;
+        int ans = 0;
+        while (left <= right) {
+            long long mid = (left + right) >> 1;
+            if ((long long) (mid * mid) > x) {
+                right = mid - 1;
             }
-            else if((long long )mid*mid<=x){
-                // 问题的特殊性觉得，我们存储的用于是左界，
-                ans=mid;
-                left=mid+1;
+            else if ((long long) (mid * mid) == x) {
+                return mid;
             }
-            //cout<<left<<endl;
-            
+            else {
+                ans = mid;
+                left = mid + 1;
+            }
         }
         return ans;
     }
@@ -242,30 +241,8 @@ public:
     -  while条件和左右边界调整细节：当right=mid-1&&left=mid+1这样的移动规则后，while(条件为left<=right) 如果取不到等于号，这种情况会导致结果错误； 
     - 相反如果right=mid left=mid+1 这样移动后，while条件应为left < right，如果取=会导致程序搜索到目标值后无法跳出循环
 
-- 基本版本：
-```// The API isBadVersion is defined for you.
-// bool isBadVersion(int version);
-
-class Solution {
-public:
-    int firstBadVersion(int n) {
-        long long left=1;
-        long long right=n;
-        while(left<=right){
-            int mid=(right+left)/2;
-            if(isBadVersion(mid)){
-                right=mid-1;
-            }else{
-                left=mid+1;
-            }
-        }
-        return left;
-    }
-};
-```
-
-- 改进版本
-```// The API isBadVersion is defined for you.
+```c++
+// The API isBadVersion is defined for you.
 // bool isBadVersion(int version);
 
 class Solution {
@@ -274,7 +251,7 @@ public:
         int left=1;
         int right=n;
         while(left<=right){
-            int mid=left+(right-left)/2;
+            int mid=left+(right-left)/2; // （left + right) >> 1;
             if(isBadVersion(mid)){
                 right=mid-1;
             }else{
@@ -287,20 +264,27 @@ public:
 ```
 
 ### 33. 搜索旋转排序数组 [KEY] [Medium]
+> 整数数组 nums 按升序排列，**数组中的值 互不相同**。
+> 在传递给函数之前，nums 在预先未知的某个下标 k（0 <= k < nums.length）上进行了 旋转
+
+```
+输入：nums = [4,5,6,7,0,1,2], target = 0
+输出：4
+```
 - 中等题目
 - 给定的数组经过旋转后，是**部分有序的**。如何定位旋转位置
 - 查找中的区间定位要发生改变，要考虑部分有序的区间来搜索：
+- 因为元素是不重复的，所以可以放心的根据对比进行搜索方向调整
   - `num[0]<=num[mid]` 搜索位于左侧有序半区
     - 判断target是否位于该半区，不在的话移动left
-  - `num[0]>num[mid]`  搜索位于搜侧有序半区
+  - `num[0]>num[mid]`  搜索位于右侧有序半区
     - 判断target是否位于该半区，不在的话移动right
-```class Solution {
+```c++
+class Solution {
 public:
     int search(vector<int>& nums, int target) {
         int left = 0;
-        
         int right =  nums.size()-1;
-        
         while(left<=right){
             int mid=left+(right-left)/2;
             if(nums[mid]==target)
@@ -317,22 +301,20 @@ public:
                     {left=mid+1;}
                 else    
                     {right=mid-1;}
-            }
-          
+            }     
         }
         return -1;
-
     }
 };
 ```
 ### 81. 搜索旋转有序数组 [有重复] [Medium]
 - 给出有序数组中是否有target
-- 与上题目相比需要考虑重复的情况，
-  - 重复情况下，二分查找将退化为线性搜索
+- 与[LC33.搜索旋转排序数组]相比**需要考虑重复的情况**，即数组元素存在相等的情况
+  - 重复情况下，**二分查找将退化为线性搜索**
   - 需要做简单的线性移动查找即可
   - 即当`nums[left]==nums[mid]`时进行线性判断，`left++`即可
 
-```
+```c++
 class Solution {
 public:
     bool search(vector<int>& nums, int target) {
@@ -359,23 +341,25 @@ public:
                     right = mid - 1;
                 }
             }
+            // 额外增加的对重复情况的判断， 即对比点相同时进行线性搜索
             else if (nums[left] == nums[mid]) {
                 left++;
             }
         }
         return false;
-
     }
 };
 ```
 
 
-
 ### 34. 在排序数组中查找元素的第一个和最后一个位置  [Medium Red*]
 - 二分查找寻找边界
-- 分别**通过二分查找**寻找左右边界，重新定义一个函数来辅助实现；避免进入线性搜索的情况
+- 分别**通过二分查找**寻找左右边界，
+  - **重新定义一个函数来辅助实现；避免进入线性搜索的情况**
+  - 特别注意： **对返回结果的判断: 是否溢出且是否值相等**
 - 时间复杂度 O(logN) 空间复杂度 O(1)
-```class Solution {
+```c++
+class Solution {
 public:
     int binarySearch(vector<int>& nums, int target, bool left_flag){
         int left = 0;
@@ -405,62 +389,56 @@ public:
     }
     vector<int> searchRange(vector<int>& nums, int target) {
         int left_range=binarySearch(nums,target,true);
-        if(left_range>=nums.size()|| nums[left_range]!=target)
+        if(left_range>=nums.size() || nums[left_range]!=target)
             return vector<int>{-1, -1};
         int right_range=binarySearch(nums,target,false);
         return vector<int>{left_range, right_range};
     }
 };
 ```
-- 0403优化
+- **代码精简**
   - 找到左边界后，缩小第二次遍历的范围
-```
+```c++
 class Solution {
 public:
-    int binarySearch(vector<int>& nums, int target, int left, int right, int direction) {
-        while (left <= right) {
-            int mid = left + (right - left) / 2;
-            if (nums[mid] < target) {
-                left = mid + 1;
-            }
-            else if (nums[mid] == target) {
-                if (direction == 0) {
-                    right = mid - 1;
-                }
-                else {
-                    left = mid + 1;
-                }
+    vector<int> searchRange(vector<int>& nums, int target) {
+        int l = 0;
+        int r = nums.size() - 1;
+        while (l <= r) {
+            int mid = (l + r) >> 1;
+            if (nums[mid] >= target) {
+                r = mid - 1;
             }
             else {
-                right = mid - 1;
+                l = mid + 1;
             }
         }
-        if (direction == 0) {
-            return left<nums.size() && nums[left] == target ? left : -1;
+        vector<int> res(2, -1);
+        // 结果检查
+        if (l >= nums.size() || nums[l] != target) {
+            return res;
         }
-        else {
-            return right<nums.size() && nums[right] == target ? right : -1;
+        res[0] = l; // 保存结果
+        r = nums.size() - 1; // 重新执行
+        while (l <= r) {
+            int mid = (l + r) >> 1;
+            if (nums[mid] > target) {
+                r = mid - 1;
+            }
+            else {
+                l = mid + 1;
+            }
         }
-     }
-    vector<int> searchRange(vector<int>& nums, int target) {
-        int Len = nums.size();
-        vector<int> ans;
-        int left = binarySearch(nums, target, 0, Len - 1, 0);
-        if (left != -1) {
-            ans.push_back(left);
-            int right = binarySearch(nums, target, left, Len - 1, 1);
-            ans.push_back(right);
-        }
-        else {
-            ans.push_back(-1);
-            ans.push_back(-1);
-        }
-        return ans;
-  }
+        res[1] = r;
+        return res;
+    }
 };
 ```
 
 ### 658. Find K Closest Elements [Medium]
+> 给定**一个排序好的数组 arr** ，两个整数 k 和 x ，从数组中**找到最靠近 x（两数之差最小）的 k 个数**。返回的结果必须要是按升序排好的。
+
+
 - 中等题目
 - 二分查找找边界的变形应用
 - 给定**有序数组**，找出其中与目标`x`最接近的`K`个元素
@@ -471,10 +449,9 @@ public:
         - 当`low<0`或者`high`与target的距离更近时，high++
         - 当`high>=arr.size`或者`low`与target的距离更近时，low--
         - 以上调整的核心目的是避免溢出，并找到closest的区间
-
     - 时间复杂度： O(logN+k) 空间复杂度 O(k)
-
-```
+- 关键点： **`二分搜索确定lower_bound`** **`双指针法确定最优区间`**
+```c++
 class Solution {
 public:
     vector<int> findClosestElements(vector<int>& arr, int k, int x) {
@@ -524,6 +501,41 @@ public:
 ```
 最终返回的是【start+1，end]，主要看循环条件的设置： **end-(start+1)<k**
 
+
+- 更简洁的思路：双指针+**排除法**
+    - 最容易理解的方法，利用数组的有序特性，**从左右两侧调整指针，得到最优的空间**
+    - *类似于TwoSum的方法*
+    - **利用双指针，从左到右逐一删除至k个元素**
+    - 时间复杂度： O(n) 线性复杂度; 空间复杂度 O(k)
+- 关键点： **`两端排除思想`** **`双指针实现`**
+```c++
+class Solution {
+public:
+    vector<int> findClosestElements(vector<int>& arr, int k, int x) {
+        int left = 0;
+        int right = arr.size()-1;
+        if (arr[left]>=x){
+            //vector<int> ans (arr.begin(), arr.begin()+k);
+            vector<int> ans (arr.begin(), arr.begin() + k);
+            return ans;
+        }
+        if (arr[right]<=x){
+            vector<int> ans (arr.begin()+right-k+1, arr.begin()+right+1);
+            return ans;
+        }
+        while(right-left+1>k){
+            if(abs(x-arr[left])<=abs(arr[right]-x)){
+                right--;
+            }
+            else
+                left++;
+        }
+    vector<int> ans(arr.begin()+left, arr.begin()+left+k);
+    return ans;
+    }
+};
+```
+
 - **二分查找的进阶优化**：  **[KEY]**
     - 直接通过二分查找找到最优区间的左边界，当target位于区间内时通过收缩左边界来寻找最优结果
     - 二分查找的模板改造：
@@ -532,7 +544,8 @@ public:
         3. 否则收缩右边界
         4. 最后返回 **[left,left+k)**
 
-```class Solution {
+```c++
+class Solution {
 public:
     vector<int> findClosestElements(vector<int>& arr, int k, int x) {
         int left = 0;
@@ -565,43 +578,8 @@ public:
 ```
 
 
-- 其他思路：**排除法**
-    - 最容易理解的方法，利用数组的有序特性，**从左右两侧调整指针，得到最优的空间**
-    - *类似于TwoSum的方法*
-    - 利用双指针，从左到右逐一删除至k个元素
-    - 时间复杂度： O(n) 线性复杂度; 空间复杂度 O(k)
-
-
-```
-class Solution {
-public:
-    vector<int> findClosestElements(vector<int>& arr, int k, int x) {
-        int left = 0;
-        int right = arr.size()-1;
-        if (arr[left]>=x){
-            //vector<int> ans (arr.begin(), arr.begin()+k);
-            vector<int> ans (arr.begin(), arr.begin() + k);
-            return ans;
-        }
-        if (arr[right]<=x){
-            vector<int> ans (arr.begin()+right-k+1, arr.begin()+right+1);
-            return ans;
-        }
-        while(right-left+1>k){
-            if(abs(x-arr[left])<=abs(arr[right]-x)){
-                right--;
-            }
-            else
-                left++;
-        }
-    vector<int> ans(arr.begin()+left, arr.begin()+left+k);
-    return ans;
-    }
-};
-```
-
-### 162. 寻找峰值
-> 峰值元素是指其值大于左右相邻值的元素。给你一个输入数组 nums，找到峰值元素并返回其索引。数组可能包含多个峰值，在这种情况下，返回 任何一个峰值 所在位置即可. nums[-1] = nums[n] = -∞ 。**`nums[i] != nums[i + 1]`**
+### 162. 寻找峰值 :sunny:
+> 峰值元素是**指其值大于左右相邻值的元素**。给你一个输入数组 nums，找到峰值元素并返回其索引。数组可能包含多个峰值，在这种情况下，返回 任何一个峰值 所在位置即可. nums[-1] = nums[n] = -∞ 。**`nums[i] != nums[i + 1]`**
 
 ```
 输入：nums = [1,2,3,1]
@@ -616,11 +594,11 @@ public:
     - 比较麻烦的是：
         - 临界点的设置： **left < right**；
         - 当设置为**left <= right**， 对于长度为1的数据会有问题
-        - **搜索空间的方向**
-          - 由于相邻元素不相等，那么就可以沿着上升方向去缩小搜索区间，一定会找到peak
+        - **搜索空间的方向**: 重要定理： 
+          - 由于相邻元素不相等，那么就可以沿着上升方向去缩小搜索区间，**一定会找到peak**
 - 关键点： **`二分搜索的方向`**  **`二分查找的边界`**
 
-```
+```c++
 class Solution {
 public:
     int findPeakElement(vector<int>& nums) {
@@ -630,7 +608,8 @@ public:
 
         while(left<right){
             int mid = left+(right-left)/2;
-            if(nums[mid]>=nums[mid+1]){
+            // 需要对mid + 1 进行操作，因此<=的边界可能会存在溢出
+            if(nums[mid] > nums[mid+1]){ 
                 right=mid;
             }else{
                 left=mid+1;
@@ -640,11 +619,36 @@ public:
     }
 };
 ```
+- 其他形式的写法：
+```c++
+class Solution {
+public:
+    int findPeakElement(vector<int>& nums) {
+        int l = 0;
+        int ans = 0;
+        int n = nums.size();
+        int r = nums.size() - 1;
+        while (l <= r) {
+            int mid = (l + r) >> 1;
+            if (mid < n - 1 && nums[mid] < nums[mid+1]) {
+                l = mid + 1;
+            }
+            else if (mid > 0 && nums[mid] < nums[mid - 1]) {
+                r = mid - 1;
+            }
+            else {
+                return mid;
+            }
+        }
+        return ans;
+    }
+};
+```
 
 - 其他思路： **线性搜索**
     - 在相邻元素不相等的前提下，可以得到当`nums[i]>nums[i+1]`就一定可以找到peak
     - 时间复杂度： O(N)
-```
+```c++
 class Solution {
 public:
     int findPeakElement(vector<int>& nums) {
@@ -660,7 +664,7 @@ public:
 
 ## 衍生题目
 
-### 4. 寻找两个正序数组的中位数 **
+### 4. 寻找两个正序数组的中位数 :sunny:
 > 给定两个大小分别为 m 和 n 的正序（从小到大）数组 nums1 和 nums2。请你找出并返回这两个正序数组的 中位数 。
 ```
 输入：nums1 = [1,3], nums2 = [2]
@@ -671,9 +675,9 @@ public:
 - 问题转化：
     - 定义为：**计算两个数组中k-th小的数字**
     - https://leetcode-cn.com/problems/median-of-two-sorted-arrays/solution/di-k-xiao-shu-jie-fa-ni-zhen-de-dong-ma-by-geek-8m/
-    - 两个数组均为有序数组，所以可以采取二分的思想寻找k-th小的数字
-        - 对于数组A，B，`k = (l_A + l_B) / 2 ` 或者 `k = (l_A + l_B + 1) / 2` 如果`A[k/2-1] <= B[k/2-1]`,则说明区间`A[0~k/2-1]`这k/2个元素肯定不包含k-th小数字，可以排除这部分数据，在A数组中继续往前搜索：由于已经排除了k/2的数据，所以下面搜索的范围变为`k-k/2`
-        - 当k变为1时，即可进行返回判断，返回最小值
+- 两个数组**均为有序数组，所以可以采取二分的思想寻找k-th小的数字**
+    - 对于数组A，B，`k = (l_A + l_B) / 2 ` 或者 `k = (l_A + l_B + 1) / 2` 如果`A[k/2-1] <= B[k/2-1]`,则说明区间`A[0~k/2-1]`这k/2个元素肯定不包含k-th小数字，可以排除这部分数据，在A数组中继续往前搜索：由于已经排除了k/2的数据，所以下面搜索的范围变为`k-k/2`
+    - 当k变为1时，即可进行返回判断，返回最小值
 - 关键点： **`双指针 + 二分思想`**
 ```c++
 class Solution {
@@ -684,6 +688,7 @@ public:
         int index1 = 0;
         int index2 = 0;
         while (true) {
+            // 对达到边界的数组进行及时处理 返回
             if (index1 == m) {
                 return nums2[index2 + k - 1];
             }
@@ -693,7 +698,7 @@ public:
             if (k == 1) {
                 return min(nums1[index1], nums2[index2]);
             }
-            int newIndex1 = min(index1 + k / 2 - 1, m - 1);
+            int newIndex1 = min(index1 + k / 2 - 1, m - 1); // 边界设置
             int newIndex2 = min(index2 + k / 2 - 1, n - 1);
             if (nums1[newIndex1] <= nums2[newIndex2]) {
                 k -= newIndex1 - index1 + 1; //调整搜索空间
@@ -714,9 +719,6 @@ public:
         else {
             return getKthElments(nums1, nums2, (l1 + l2 + 1) / 2);
         }
-
-
-
     }
 };
 ```
@@ -726,7 +728,8 @@ public:
     - 边界问题比较棘手
     - 时间复杂度也是 O(log (m+n))
 
-```class Solution {
+```c++
+class Solution {
 public:
     double findMedianSortedArrays(vector<int>& nums1, vector<int>& nums2) {
         int l1 = nums1.size();
@@ -746,10 +749,8 @@ public:
                 right = mid;
             }
         }
- 
         int c1 = max(left <= 0 ? INT_MIN:nums1[left-1],
                           k - left <= 0 ? INT_MIN:nums2[k - left -1]);
-
         if ((l1 + l2) % 2 == 1) {
             return c1;
         }
@@ -759,18 +760,17 @@ public:
 
             return (c1 + c2) / 2.0;
         }
-
     }
 };
 ```
 
-### 50. Pow(x,n)
+### 50. Pow(x,n) :m:
 - 实现幂计算
 - 基本思路： 直接线性循环，暴力解法可能超时
 - 基于迭代思路： `x->x^2->x^4->...`
 - 时间复杂度： O(logN) 空间复杂度：（递归栈占用）O(logN)
 - 关键点： **`n的符号`**
-```
+```c++
 class Solution {
 public:
     double cal(double x, int n){
@@ -788,14 +788,15 @@ public:
 - **迭代写法** 
 - 时间复杂度同样为 O(logN) 空间复杂度为常量级别 O(1)
 
-```class Solution {
+```c++
+class Solution {
 public:
     double cal(double x, long long n){
         double ans = 1.0;
         double tmp = x;
         while(n>0){
             if(n%2==1){
-                ans*=tmp;
+                ans*=tmp; // 奇数记录结果
             }
             tmp*=tmp;
             n/=2;
@@ -815,7 +816,8 @@ public:
     - 平方溢出情况
     - 1/0的情况
 
-```class Solution {
+```c++
+class Solution {
 public:
     bool isPerfectSquare(int num) {
         if(num<=1)
@@ -848,7 +850,8 @@ public:
 - 通过二分法确定目标的右边界，返回右边界后的值即可
 - 临界处理： 当目标大于序列内的所有字母时，由于题中规定字母是循环，这种情况直接返回第一个值即可
 
-```class Solution {
+```c++
+class Solution {
 public:
     char nextGreatestLetter(vector<char>& letters, char target) {
         int left = 0;
@@ -876,6 +879,7 @@ public:
 
 ### 153. 寻找旋转排列数组中的最小值 *
 - 有序数组后经过旋转的最小值，为序列中的变化点
+  - **有序数组元素不重复**
 - 可以通过改造二分查找进行去确定
 - 在套用模板时发现：利用`left<=right`这套模版**实现起来需要考虑诸多细节，bug频出**
 - 因此使用`left<right`模板来实现:
@@ -966,7 +970,7 @@ public:
 };
 ```
 ### 154. 寻找旋转排列数组中的最小值 II **
-- 有重复值的情况 hard
+- **有重复值的情况 hard**
 - 需要在上一个解法的基础考虑重复值的影响
 
 - 参照上题中对不同情况的分析，在有重复值的影响下，多了相等情况的处理：
@@ -1047,7 +1051,7 @@ public:
         - 给定的数组元素范围在`[1,n]`之间，共有`1+n`个元素
         - 根据抽屉原理，必然存在重复的元素；
         - 常规的二分查找方法无法直接应用于本题的数组中 因为数据是无序的
-        - 需要根据抽屉原理来进行查找： 具体而言，从1～n中遍历，查找小于等于x (`<=x`)的值的数量 `cnt`
+        - 需要根据抽屉原理来进行查找： **具体而言，从1～n中遍历，查找小于等于x (`<=x`)的值的数量 `cnt`**
         - 如果`cnt <= x`则说明区间`[1,x]`不存在重复情况，否则说明`[1,x]`区间必然存在重复
     - 时间复杂度： O(nlogn)
 ```c++
@@ -1100,6 +1104,11 @@ public:
    - **时间复杂度 O(n) 空间复杂度 O(1)**
    - 采用`do ... while`的结构，**避免初始化无法开始，非常巧妙的技巧**
    - 该题目下最优的解法
+```
+输入：nums = [1,3,4,2,2]
+输出：2
+```
+- 关键点： **`问题转换`** **`快慢指针解环`**
 ```c++
 class Solution {
 public:
@@ -1118,19 +1127,49 @@ public:
     }
 };
 ```
+- 其他实现版本：
+
+```c++
+class Solution {
+public:
+    int findDuplicate(vector<int>& nums) {
+        int slow = 0;
+        int fast = 0;
+        while (true) {
+            slow = nums[slow];
+            fast = nums[nums[fast]];
+            if (fast == slow) {
+                break;
+            }
+        }
+        slow = 0;
+        while (fast != slow) {
+            fast = nums[fast];
+            slow = nums[slow];
+        }
+        return slow; // 最后直接返回指针值即可
+    }
+};
+```
 
 
 
 ### 719. 寻找第k小的距离对 [KEY]
-
+> 给定一个整数数组，返回所有数对之间的第 k 个最小距离。一对 (A, B) 的距离被定义为 A 和 B 之间的绝对差值。
+```
+输入：
+nums = [1,3,1]
+k = 1
+输出：0 
+```
 -  又是一个典型的二分查找的变形应用，依然hard
-- 与上一道题目相似，也是要做一些任务转化，本质都是求k-th小的数字
-    - 同样通过计算`cnt(x)= count(i<=x)`统计小于等于x的数字来进行判断
+- 与上一道题目相似，也是要做一些任务转化，**本质都是求k-th小的数字**
+    - **同样通过计算`cnt(x)= count(i<=x)`统计小于等于x的数字来进行判断**
     - 只不过这个地方是对距离值进行判断，判断有多少对距离值小于等于x
     - 当`cnt < k`时： 说明当前值x肯定不是目标值，可以往前搜索
     - **本质上模板等同于二分查找找左/右边界的情况**
 - 时间复杂度： O(NlogN + NlogW) : 包括两个部分：数组排序部分 和  二分查找部分
-
+- 关键点： **`二分查找的泛化条件`**
 
 ```c++
 class Solution {
@@ -1140,15 +1179,15 @@ public:
             return 0;
         sort (nums.begin(), nums.end());
         int left = 0;
-        int right = nums[nums.size() - 1] - nums[0];
+        int right = nums[nums.size() - 1] - nums[0]; // 确定搜索空间
         while (left < right) {
             int mid = left + (right - left) / 2;
             int l = 0, count = 0;
+            // 注意实现细节
             for (int i = 0; i < nums.size(); i++){
                 while ((nums[i] - nums[l]) > mid)
                     l ++;
-                count += (i - l);
-                //cout << i << endl;
+                count += (i - l); // 逐行的思想
             }
             if (count < k) 
                 left = mid + 1;
@@ -1162,7 +1201,7 @@ public:
 ```
 
 ### 410. 分割数组的最大值 [KEY]
-> 给定一个非负整数数组 nums 和一个整数 m ，你需要将这个数组分成 m 个非空的连续子数组。设计一个算法使得这 m 个子数组各自和的最大值最小。
+> 给定一个非负整数数组 nums 和一个整数 m ，你需要将这个数组分成 m 个非空的连续子数组。**设计一个算法使得这 m 个子数组各自和的最大值最小**。
 
 
 - 将**无序数组划分为m个连续子序列，计算最小的分割序列最大值**
@@ -1218,7 +1257,8 @@ public:
 ```
 - **二分比动态规划要更容易掌握，也是解决这类题目真正的考察点**
 - 其他思路： **动态规划**
-- 动态规划状态公式： 将i个数分割为j个子序列的最优值：$dp[i][j]= min_{k=0}^{i-1} max(dp[k][j-1],sub(k+1,i))$其中$i>=j$, 结果为dp[n][m]
+- 动态规划状态公式： 
+  - 将i个数分割为j个子序列的最优值：$dp[i][j]= min_{k=0}^{i-1} max(dp[k][j-1],sub(k+1,i))$其中$i>=j$, 结果为dp[n][m]
 - 注意创建dp二维状态数组的大小和初始化情况。
 
 
@@ -1336,7 +1376,7 @@ int findMaxLen(vector<int> arr, int k) {
     for (int i = 0; i<arr.size(); i++) {
         r = max(r, arr[i]);
     }
-    cout << l << ' ' << r << endl;
+    //cout << l << ' ' << r << endl;
     while(l <= r) {
         int mid = l + (r - l) / 2; 
         cout << 'm' << mid << endl;
@@ -1348,15 +1388,23 @@ int findMaxLen(vector<int> arr, int k) {
             r= mid - 1;
         }
         cout << "l: " << l << " r :" << r  << endl;
-    }
-    return r;
+    } 
+    return r; // 计算最大值 所以相当于是在计算右边界 
 }
 ```
 ### 29. 两数相除 [Medium]
+> 给定两个整数，被除数 dividend 和除数 divisor。将两数相除，**要求不使用乘法、除法和 mod 运算符**。
+返回被除数 **dividend 除以除数 divisor 得到的商**。
+整数除法的结果应当截去（truncate）其小数部分，例如：truncate(8.345) = 8 以及 truncate(-2.7335) = -2
+ 
 - 同样是二分思想的利用，特点在于二分倍增
-- 不用* / 运算符实现整数除法，即比较除数与被除数的大小，对除数进行倍增处理，当倍增值超过被除数时进行调整，对剩下的被除数/余数继续与除数进行倍增比较
+  - 不用* / 运算符实现整数除法，
+  - 即比较除数与被除数的大小，对除数进行倍增处理，
+  - 当倍增值超过被除数时进行调整，对剩下的被除数/余数继续与除数进行倍增比较
 - 时间复杂度 O(logN)
-```
+- 注意**对符号的处理**
+  - **将除数和被除数都先转换为正数**
+```c++
 class Solution {
 public:
     int div(long a, long b) {
@@ -1364,8 +1412,8 @@ public:
         int count = 1;
         long tb = b;
         while( a >= (tb + tb)) {
-            count = count + count ;
-            tb = tb + tb;
+            count += count;
+            tb += tb;
         }
         return div(a - tb, b) + count;
     }
@@ -1386,6 +1434,38 @@ public:
         b = b > 0 ? b : - b;
         //cout << a << " " << b << endl;
         return sign ? div(a,b) : div(a, b) * (-1) ;
+    }
+};
+```
+
+### 852. 山脉数组的峰顶索引
+> 符合下列属性的数组 arr 称为 山脉数组 ：
+arr.length >= 3
+存在 i（0 < i < arr.length - 1）使得：
+arr[0] < arr[1] < ... arr[i-1] < arr[i]
+arr[i] > arr[i+1] > ... > arr[arr.length - 1]
+
+```
+输入：arr = [0,2,1,0]
+输出：1
+```
+- 与[LC162.寻找峰值]一样，换了个描述而已，直接上代码
+```c++
+class Solution {
+public:
+    int peakIndexInMountainArray(vector<int>& arr) {
+        int l = 0;
+        int r = arr.size() - 1;
+        while (l < r) {
+            int mid = (l + r) >> 1;
+            if (arr[mid] > arr[mid + 1]) {
+                r = mid;
+            }
+            else {
+                l = mid + 1;
+            }
+        }
+        return r;
     }
 };
 ```
