--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -458,13 +458,13 @@ public:
     - 当前fast到入口的距离为m, 那么head到入口为k-m, 
     	- fast向前移动k-m到达入口(m + k -m) 
         - head从头移动k-m也到达入口
-```
+```c++
 class Solution {
 public:
     ListNode *detectCycle(ListNode *head) {
         ListNode* slow = head;
         ListNode* fast = head;
-        if (!head)
+        if (!head)s
             return nullptr;
         bool flag = false;
         while(fast && fast -> next) {
